[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://components/apps/alpha_instant_messenger/aim_chat_ui.gd" id="1"]
[ext_resource type="PackedScene" path="res://components/portrait/portrait_view.tscn" id="2"]
[ext_resource type="Theme" path="res://assets/themes/windows_95_theme.tres" id="3"]

[node name="AimChatUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("1")
window_title = "Chat"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HeaderHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="Portrait" parent="MarginContainer/VBoxContainer/HeaderHBox" instance=ExtResource("2")]
unique_name_in_owner = true
mouse_filter = 2
portrait_creator_enabled = false
portrait_scale = 1.0
custom_minimum_size = Vector2(32, 32)

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox"]
unique_name_in_owner = true
text = "@username"
mouse_filter = 2
vertical_alignment = 1

[node name="MessagesScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessagesVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MessagesScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ButtonsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="GreetButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsGrid"]
unique_name_in_owner = true
text = "Greet"

[node name="GiftButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsGrid"]
unique_name_in_owner = true
text = "Gift"

[node name="DateButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsGrid"]
unique_name_in_owner = true
text = "Date"

[node name="RelationshipButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsGrid"]
unique_name_in_owner = true
text = "Discuss Relationship"
